--- a/lang/en.json
+++ b/lang/en.json
@@ -1,128 +1,145 @@
 {
-"nodatafound": "Dados anteriores não encontrado nessa PORRA.",
-"retrievingdata": "Recuperando dados anteriores dessa delicia.",
-"datarestored": "Dados anteriores recuperados <3 .",
-"greyuser": "Somente seguranças ou mais podem ativar o script, seu lixão.",
-"bouncer": "O script não pode mover pessoas enquanto usado por um segurança viadão.",
-"online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PARA COMER UNS CU!",
-"welcome": "/me Seja welcomido(a) @%%NAME%% delicinha :green_heart: leia nossas regras http://goo.gl/6RP5x1 ",
-"welcomeback": "/me Welcomido(a) de volta, @%%NAME%% kawaiizudo :blue_heart: :blue_heart:",
-"songknown": "/me :repeat: Essa caraia foi tocada %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%, a ultima vez desse lixo foi %%LASTTIME%% atrás. :repeat:",
-"timelimit": "/me @%%NAME%%, ESSA MERDA É SUPERIOR A %%MAXLENGTH%% MINUTOS CARALHO, você não pode rodar algo longo assim porra.",
-"permissionownsong": "/me :up: @%%NAME%% tem permissão para rodar um video de sua autoria!",
-"isblacklisted": "/me Esse video está na %%BLACKLIST%% lista negra! Pulando...",
-"isopen": "/me A ROLETA RUSSA COMEÇOU CARALHOOOOOOOO! Digite !join para participar!",
-"winnerpicked": "/me UM VIADÃO FOI ESCOLHIDO! @%%NAME%% para a posição %%POSITION%%.",
-"alreadyadding": "/me Usuario já está sendo adicionado! Posição alterada para %%POSITION%%.",
-"adding": "/me Adicionou @%%NAME%% a fila. Posição atual: %%POSITION%%.",
-"usernotfound": "/me Viadão não encontrado.",
-"notdisconnected": "/me @%%NAME%% não caiu enquanto estava nessa caraia.",
-"noposition": "/me Sem ultima posição conhecida (Mas lembro um pouco do 69 hmmm). A fila precisa ser atualizada ao menos 1 vez para registrar posições.",
-"toolongago": "/me @%%NAME%% saiu há muito tempo atrás, há %%TIME%%, num fode cara",
-"valid": "/me @%%NAME%% foi dar o cu há %%TIME%% e deve ter a bundinha na posição %%POSITION%%.",
-"warning1": "/me @%%NAME%%, você esteve afk por %%TIME%%, FALE ALGUMA COISA SE NÃO VOU TE REMOVER DA FILA FILHO DA PUTA.",
-"warning2": "/me @%%NAME%%, VOCÊ VAI SER REMOVIDO, ULTIMO AVISO CARALHO <3.",
-"afkremove": "/me @%%NAME%%, você foi removido por ficar muito tempo afk, %%TIME%%. Você estava na posição %%POSITION%%. Converse ao minimo 1 vez a cada %%MAXIMUMAFK%% minutos se você quiser tocar um video.",
-"caps": "/me @%%NAME%%, DESLIGA ESSE CAPS SEU FILHO DA MÃE SEM COSTUMES.",
-"askskip": "/me @%%NAME%%, NÃO PEDE PARA PULAR FILHO DA PUTA.",
-"spam": "/me @%%NAME%%, PARA DE SPAM CARALHO.",
-"roomadvertising": "/me @%%NAME%%, BOTA LINK DE PORNO DA SUA MÃE FILHO DA PUTA QUE É MELHOR.",
-"adfly": "/me @%%NAME%%, mude seu autowoot. Aconselhamos o Origem Woot: http://goo.gl/iubHkn",
-"invalidtime": "/me [@%%NAME%%] tempo invalido.",
-"nouserspecified": "/me [@%%NAME%%] Viadão não expecificado.",
-"invaliduserspecified": "/me [@%%NAME%%] Viadão invalido.",
-"nolistspecified": "/me [@%%NAME%%] Sem lista expecifica.",
-"invalidlistspecified": "/me [@%%NAME%%] Lista invalida.",
-"novaliduserspecified": "/me [@%%NAME%%] Usuario invalido (Igual a piroka).",
-"nolimitspecified": "/me [@%%NAME%%] Sem limite expecificado.",
-"invalidlimitspecified": "/me [@%%NAME%%] Limite invalido.",
-"invalidpositionspecified": "/me [@%%NAME%%] Posição invalida.",
-"toggleon": "/me [@%%NAME%%] %%FUNCTION%% ATIVADO NESSA DELICIA.",
-"toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado nessa delicia.",
-"afkremoval": "Removendo AFKs BUAHAHAHAHA",
-"afksremoved": "AFKs removidos <3",
-"afklimit": "AFK limite",
-"autoskip": "pulando automaticamente",
-"newblacklisted": "/me [@%%NAME%%] Essa música está na %%BLACKLIST%% LISTA NEGRA! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
-"blinfo": "[@%%NAME%%] Infoormação da lista negra - Autor: %%AUTHOR%%, Titulo: %%TITLE%%, mID: %%SONGID%%",
-"blacklist": "LISTA NEGRAAAAA",
-"cycleguard": "cycleguard",
-"timeguard": "timeguard",
-"chatfilter": "chatfilter",
-"lockdown": "lockdown",
-"lockguard": "lockguard",
-"usercommands": "comandos de usuários",
-"motd": "MotD",
-"welcomemsg": "mensagem de boas vindas para novas bixas",
-"songstats": "estatísticas da música <3",
-"etarestriction": "eta restrição",
-"voteskip": "Pulo por votos",
-"voteskiplimit": "/me [@%%NAME%%] Votos para pulo configurada á %%LIMIT%% chatos/mehs.",
-"voteskipexceededlimit": "/me @%%Name%%, seu video passou do limite de MEH's/Chatos por ser muito merda (%%LIMIT%% chatos).",
-"voteskipinvalidlimit": "/me [@%%NAME%%] Voteskip invalido PORRA, depois tente novamente.",
-"voteskipsetlimit": "/me [@%%NAME%%] Limite de voteskip configurado para %%LIMIT%%.",
-"activeusersintime": "/me [@%%NAME%% Aqui tem %%AMOUNT%% usuarios ativos nos ultimos %%TIME%% minutos.",
-"maximumafktimeset": "/me [@%%NAME%%] Duração maxima de afk configurada para %%TIME%% minutos.",
-"afkstatusreset": "/me [@%%NAME%%] Status de afk resetado de @%%USERNAME%%.",
-"inactivefor": "/me [@%%NAME%%] @%%USERNAME%% está inativo por %%TIME%%.",
-"autowoot": "/me Recomendamos o Origem Woot para autowoot: http://goo.gl/iubHkn",
-"brandambassador": "/me Um Embaixador de Marca é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
-"bouncerplusrank": "/me [@%%NAME%%] você precisa ser Coordenador ou mais para ativar o segurança+.",
-"chatcleared": "/me [@%%NAME%%] limpou o chat com o cu de algum vacilão.",
-"deletechat": "/me [@%%NAME%%] Limpou o chat de %%USERNAME%% com o cu dele.",
-"commandslink": "/me %%BOTNAME%% comandos: https://github.com/B1G-B0SS/Exercito-Bot/blob/master/commands.md",
-"eatcookie": "/me ama buscar a peça.",
-"nousercookie": "/em não vejo %%NAME%% na sala, ele deve ter ido dar a bunda.",
-"selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando essas delicias a si mesmo, bah. Compartilhe um pouco com os outros FILHO DA PUTA!",
-"cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
-"cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é %%TIME%% minuto(s).",
-"dclookuprank": "/me [@%%NAME%%] Somente seguranças ou superiores podem dar !dcloockup em outros usuarios.",
-"emojilist": "/me Lista de emojis: %%LINK%%",
-"notinwaitlist": "/me @%%NAME%%, vocÊ não está na fila PORRA.",
-"eta": "/me @%%NAME%% você vai rodar sua merda daqui há %%TIME%%.",
-"facebook": "/me Curta nossa página no Facebook: %%LINK%%",
-"starterhelp": "/me Essa imagem te ajudara a usar o Plug: %%LINK%%",
-"roulettejoin": "/me @%%NAME%% ENTROU NA ROLETA RUSSAAAAAAAAAA! (!leave se você quiser desistir seu arregão.)",
-"jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve na sala por %%TIME%% minuto(s).",
-"kickrank": "/me [@%%NAME%%] você não pode kickar alguém com mesmo cargo, ou superior a você FILHO DA PUTA!",
-"kick": "/me [@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
-"kill": "/me Eu voltarei, e vou comer seu cu, seu....filho..da.......puta.",
-"rouletteleave": "/me @%%NAME%% arregou da roleta!",
-"songlink": "/me [@%%NAME%%] Link do video atual: %%LINK%%",
-"usedlockskip": "/me [%%NAME%% usou lockskip, é super efetivo no pokemon tipo Zé Bostola.]",
-"lockskippos": "/me [@%%NAME%%] Lockskip irá mover o dj para a posição %%POSITION%%.",
-"lockguardtime": "/me [@%%NAME%%] Lockguard configurado para %%TIME%% minuto(s).",
-"maxlengthtime": "/me [@%%NAME%%] Duração maxima de música configurada para %%TIME%% minutos.",
-"motdset": "/me MotD configurado para: %%MSG%%",
-"motdintervalset": "/me Intervalo de MotD configurado para %%INTERVAL%%.",
-"addbotwaitlist": "/me @%%NAME%%, NÃO TENTE ME ADICIONAR A FILA FILHO DA PUTA.",
-"move": "/me [%%NAME%% usou mover, é super efetivo no pokemon tipo Jailson.]",
-"mutednotime": "/me [@%%NAME%%] calou @%%USERNAME%%.",
-"mutedmaxtime": "/me [@%%NAME%%] Você só pode calar no maximo por %%TIME%% minutos.",
-"mutedtime": "/me [@%%NAME%%] Calou @%%USERNAME%% por %%TIME%% minutos.",
-"unmuted": "/me [@%%NAME%%] Pode falar novamente @%%USERNAME%%.",
-"muterank": "/me [@%%NAME%%] Você não pode calar usuarios com cargo igual, ou superior ao seu, SEU PORRA.",
-"oplist": "/me OP lista: %%LINK%%",
-"pong": "/me Pong NO SEU CU SEU MERDA!",
-"reload": "/me Vou comer o cu de um vacilão, já volto.",
-"removenotinwl": "/me [@%%NAME%%] O usuario @%%USERNAME%% não está na fila.",
-"roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
-"sessionstats": "/me [@%%NAME%%] Legais/woots total: %%WOOTS%%, Chatos/Mehs total: %%MEHS%%, Grab/add total: %%GRABS%%.",
-"skip": "/me [%%NAME%% usou skip, é super efetivo no pokemon que curte oco.]",
-"madeby": "/me Esse bot foi feito por %%NAME%%.",
-"activefor": "Estive ativo por %%TIME%%.",
-"swapinvalid": "/me [@%%NAME%%] Usuario expecificado.",
-"swapwlonly": "/me [@%%NAME%%] Somente troque com usuarios na fila (Hmmm trocar né?)",
-"swapping": "/me Trocando %%NAME1%% com %%NAME2%%.",
-"genres": "/me Encontre os generos da sala aqui: %%LINK%%",
-"notbanned": "/me [@%%NAME%%] O usuario não foi banido.",
-"unmutedeveryone": "/me [@%%NAME%%] Descalar todo mundo.",
-"unmuteeveryonerank": "/me [@%%NAME%%] Somente Coordenadores ou superior pode descalar todo mundo.",
-"notmuted": "/me [@%%NAME%%] Esse usuario não estava calado.",
-"unmuterank": "/me [@%%NAME%%] Você não pode descalar usuarios com mesmo cargo, ou superior que você.",
-"commandscd": "/me [@%%NAME%%] O delay de comandos está para %%TIME%% segundos.",
-"voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ legais/woots: %%WOOT%%, chatos/mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
-"website": "/me Visite nosso site <3 : %%LINK%%",
-"youtube": "/me [%%NAME%%] Se inscreva no nosso canal do Youtube: %%LINK%%",
-"songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
+
+    "nodatafound": "Dados anteriores não encontrados nesse karaio.",
+    "retrievingdata": "Recuperando dados anteriores.",
+    "datarestored": "Dados anteriores recuperados com sucesso <3 .",
+    "greyuser": "Somente seguranças ou mais podem abrir o bot, seu lixo.",
+    "bouncer": "Ih ala, o bot não pode mover se estiver usando como segurança.",
+    "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU NESSA KARAIA!",
+
+
+    "welcome": "/me Seja welcomido(a) %%NAME%% amorzinho <3",
+    "welcomeback": "/me Seje welcomido(a) de volta :blue_heart: , %%NAME%%",
+    "songknown": "/me @%%NAME%%, essa música está no historico de Dj's.",
+    "timelimit": "/me @%%NAME%%, essa merda de video é maior que %%MAXLENGTH%% minutos carai, você não pode rodar coisas longas assim (Mesmo sendo delicia).",
+    "permissionownsong": "/me :up: @%%NAME%% tem permissão para rodar a merdinha dele!",
+    "isblacklisted": "/me Essa bosta está na %%BLACKLIST%% lista negra! Pulando...",
+
+
+    "isopen": "/me ROOOODA ROOOODAM COMEÇOU! Digite !join para participaaar!",
+    "winnerpicked": "/me Um viadão foi escolhido, todos olharão sua bundinha peludinha! @%%NAME%% para a posição %%POSITION%%.",
+
+
+    "alreadyadding": "/me Já está sendo adicionado! Mudando para a posição %%POSITION%%.",
+    "adding": "/me Adicionando @%%NAME%% a lista de dj. Posição atual: %%POSITION%%.",
+
+
+    "usernotfound": "/me Viadão não encontrado.",
+    "notdisconnected": "/me @%%NAME%% não desconectou enquanto estive dando o cu aqui.",
+    "noposition": "/me Ultima posição desconhecida. A lista de espera precisa ser atualizada pelo menos uma vez para gravar posições.",
+    "toolongago": "/me o viadão @%%NAME%% foi dar o cu a muito tempo atrás, se fuder: %%TIME%%.",
+    "valid": "/me @%%NAME%% foi dar o cu há %%TIME%% e deve ter a posição %%POSITION%%.",
+
+
+    "warning1": "/me @%%NAME%%, você esteve dando a bunda por muito tempo %%TIME%%, responda em 2 minutos ou será removido da fila seu cuzão <3 .",
+    "warning2": "/me @%%NAME%%, você será removido por ficar afk por muito tempo.",
+    "afkremove": "/me @%%NAME%%, você foi removido por estar afk por %%TIME%%. Você estava em %%POSITION%%. Digite pelo menos uma coisa em %%MAXIMUMAFK%% minutos se você quiser rodar algo.",
+
+
+    "caps": "/me @%%NAME%%, DESGRUDA DO CAPS FILHO DA PUTA SEM COSTUMES :blue_heart: .",
+    "askskip": "/me @%%NAME%%, PARA DE PEDIR PARA PULAR FILHO DA PUTA.",
+    "spam": "/me @%%NAME%%, não faça spam filho da mãe.",
+    "roomadvertising": "/me @%%NAME%%, não poste links de outras salas FILHO DA PUTA.",
+    "adfly": "/me @%%NAME%%, mude de autowoot, use o Origem Woot: http://goo.gl/iubHkn",
+
+
+    "invalidtime": "/me [@%%NAME%%] Tempo invalido.",
+    "nouserspecified": "/me [@%%NAME%%] Usuario não expecificado.",
+    "invaliduserspecified": "/me [@%%NAME%%] Usuario expecificado invalido.",
+    "nolistspecified": "/me [@%%NAME%%] Sem lista expecificada.",
+    "invalidlistspecified": "/me [@%%NAME%%] Lista invalida expecificada.",
+    "novaliduserspecified": "/me [@%%NAME%%] Usuario invalido expecificado.",
+    "nolimitspecified": "/me [@%%NAME%%] Sem limite de tempo expecificado.",
+    "invalidlimitspecified": "/me [@%%NAME%%] Tempo invalido.",
+    "invalidpositionspecified": "/me [@%%NAME%%] Posição invalida expecificada.",
+    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativada nessa delicia.",
+    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativada nessa delicia.",
+    "afkremoval": "AFK'S sendo removidos <3 ",
+    "afksremoved": "AFK's removidos :blue_heart:",
+    "afklimit": "AFK limite",
+    "autodisable": "autodesativar",
+    "autoskip": "autopular",
+    "newblacklisted": "/me [@%%NAME%%] Está música agora pertence a %%BLACKLIST%% lista negra! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
+    "blinfo": "[@%%NAME%%] Informação da lista negra - Autor: %%AUTHOR%%, Nome: %%TITLE%%, ID: %%SONGID%%",
+    "blacklist": "ListaNegra",
+    "cycleguard": "cycleguard",
+    "timeguard": "timeguard",
+    "chatfilter": "FiltrodeChat",
+    "historyskip": "Pular repetidas",
+    "lockdown": "lockdown",
+    "lockguard": "lockguard",
+    "usercommands": "usercommands",
+    "motd": "MotD",
+    "welcomemsg": "welcome message",
+    "songstats": "song statistics",
+    "etarestriction": "eta restriction",
+    "voteskip": "voteskip",
+    "voteskiplimit": "/me [@%%NAME%%] Limite de meh's para pular foi expecificado para %%LIMIT%%.",
+    "voteskipexceededlimit": "/me @%%NAME%%, seu video excede o limite de meh's para pular (%%LIMIT%% mehs).",
+    "voteskipinvalidlimit": "/me [@%%NAME%%] Limite de meh's para pular invalido.",
+    "voteskipsetlimit": "/me [@%%NAME%%] Limite de meh's para pular expecificado para %%LIMIT%%.",
+    "activeusersintime": "/me [@%%NAME%% Aqui teve %%AMOUNT%% delicias digitando nos ultimos %%TIME%% minutos.",
+    "maximumafktimeset": "/me [@%%NAME%%] Duração maxima para afk expecificada para %%TIME%% minutos.",
+    "afkstatusreset": "/me [@%%NAME%%] Status de afk resetados do @%%USERNAME%%.",
+    "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% Si fude, você esteve dando a bunda por %%TIME%%.",
+    "autowoot": "/me Nos recomendamos o AutoWoot mais delicinha do Brasil e do Plug, o Origem Woot http://goo.gl/iubHkn",
+    "brandambassador": "/me O Embaixador da Marca é a voz do Ban no Plug DJ. Eles fazem eventos, zoam nas comunidades e espalham ban ao redor do mundo. Para mais informações acesse: https://plug.dj/ba",
+    "bouncerplusrank": "/me [@%%NAME%%] You have to be manager or up to enable Bouncer+.",
+    "chatcleared": "/me [@%%NAME%%] Limpou o chat com o cu.",
+    "deletechat": "/me [@%%NAME%%] Limpou o chat de %%USERNAME%% com a bunda.",
+    "commandslink": "/me %%BOTNAME%% comandos: %%LINK%%",
+    "eatcookie": "/me come umas pirokas pela bunda.",
+    "nousercookie": "/em Não vejo um viadão chamado %%NAME%% na sala, vou comer essa piroka só.",
+    "selfcookie": "/me @%%NAME%%, Você é murrinha heim, divide com os outros filho da puta",
+    "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
+    "cycleguardtime": "/me [@%%NAME%%] The cycleguard is set to %%TIME%% minute(s).",
+    "dclookuprank": "/me [@%%NAME%%] Somente seguranças para cima podem dar DC Look Up em outros usuarios.",
+    "emojilist": "/me Emoji list: %%LINK%%",
+    "notinwaitlist": "/me @%%NAME%%, Você não está na lista de espera.",
+    "eta": "/me @%%NAME%% todos observarão sua bundinha peludinha em %%TIME%%.",
+    "facebook": "/me DÁ UM LAIKE PRA NOIXX NO FAICE PARÇA: %%LINK%%",
+    "starterhelp": "/me Essa imagem em gringuês irá te ajudar a usar o Plugme DeJota: %%LINK%%",
+    "roulettejoin": "/me @%%NAME%% ENTROU NA ROLETA, se prepare filho da mãe! (!leave se você quiser arregar.)",
+    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% Esteve nessa sala por %%TIME%%.",
+    "kickrank": "/me [@%%NAME%%] Você não pode kickar usuarios com mesmo cargo, ou cargo superior que você filho da puta!",
+    "kick": "/me [@%%NAME%%], @%%USERNAME%% you are being kicked from the community for %%TIME%% minutes.",
+    "kill": "/me Desligando para dar o cu <3 .",
+    "rouletteleave": "/me @%%NAME%% Arregou da roleta!",
+    "songlink": "/me [@%%NAME%%] Link para o lixo atual <3: %%LINK%%",
+    "usedlockskip": "/me [%%NAME%% usou lockskip, é super efetivo no pokemon tipo: Viadão.]",
+    "lockskippos": "/me [@%%NAME%%] Lockskip agora irá mover as pessoas para a posição %%POSITION%%.",
+    "lockguardtime": "/me [@%%NAME%%] O lockguard irá te proteger em %%TIME%% minuto(s).",
+    "maxlengthtime": "/me [@%%NAME%%] A duração maxima para alguma merda aqui é de %%TIME%% minutos.",
+    "motdset": "/me MotD set to:  %%MSG%%",
+    "motdintervalset": "/me MotD interval set to %%INTERVAL%%.",
+    "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar a fila, FILHO DA PUTA.",
+    "move": "/me [%%NAME%% usou mover, é super efetivo no Pokemon tipo: Falho.]",
+    "mutednotime": "/me [@%%NAME%%] Calou @%%USERNAME%%.",
+    "mutedmaxtime": "/me [@%%NAME%%] Você só por calar por até %%TIME%% minutos.",
+    "mutedtime": "/me [@%%NAME%%] Calou @%%USERNAME%% por %%TIME%% minutos.",
+    "unmuted": "/me [@%%NAME%%] Desilenciou @%%USERNAME%%.",
+    "muterank": "/me [@%%NAME%%] Você não pode calar pessoas com o mesmo cargo, ou superior que você, SEU MERDA.",
+    "oplist": "/me OP list: %%LINK%%",
+    "pong": "/me Pong NO TEU CU FILHO DA PUTA! :blue_heart: :blue_heart:",
+    "reload": "/me Vou dar o cu numa rapidinha ali e já volto.",
+    "removenotinwl": "/me [@%%NAME%%] O usuario @%%USERNAME%% não está na fila de espera.",
+    "roomrules": "/me Encontre as regras da sala aqui <3 : http://goo.gl/6RP5x1",
+    "sessionstats": "/me [@%%NAME%%] Total de woots: %%WOOTS%%, total de meh's: %%MEHS%%, total de grabs: %%GRABS%%.",
+    "skip": "/me [%%NAME%% usou pular, é super efetivo no pokemon tipo: Merda.]",
+    "madeby": "/me Esse bot foi feito por %%NAME%%, e editado por Big Boss delicia <3 .",
+    "activefor": "Eu estive sem dar o cu por %%TIME%%.",
+    "swapinvalid": "/me [@%%NAME%%] Viadão invalido. (Nome sem espaços porra!)",
+    "swapwlonly": "/me [@%%NAME%%] Somente troque pessoas que estão na fila!",
+    "swapping": "/me Trocando (rçrçrçrçrç) %%NAME1%% com %%NAME2%%.",
+    "genres": "/me Encontre os generos da sala aqui: %%LINK%%",
+    "notbanned": "/me [@%%NAME%%]  Esse zé bostola não foi banido.",
+    "unmutedeveryone": "/me [@%%NAME%%] Desilenciando todo mundo.",
+    "unmuteeveryonerank": "/me [@%%NAME%%] Somente coordenadores ou mais podem silenciar todo mundo.",
+    "notmuted": "/me [@%%NAME%%] Esse merda não estava calado.",
+    "unmuterank": "/me [@%%NAME%%] Você não pode calar pessoas com o mesmo cargo, ou superior que você, seu merda.",
+    "commandscd": "/me [@%%NAME%%] O tempo de espera para os comandos agora é de %%TIME%% segundos.",
+    "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
+    "website": "/me Please visit our website: %%LINK%%",
+    "youtube": "/me [%%NAME%%] Subscribe to us on youtube: %%LINK%%",
+    "songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
 }
