--- a/lang/en.json
+++ b/lang/en.json
@@ -82,7 +82,7 @@
     "maximumafktimeset": "/me [@%%NAME%%] Duração maxima para afk expecificada para %%TIME%% minutos.",
     "afkstatusreset": "/me [@%%NAME%%] Status de afk resetados do @%%USERNAME%%.",
     "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% Si fude, você esteve dando a bunda por %%TIME%%.",
-    "autowoot": "/me Nos recomendamos o AutoWoot mais delicinha do Brasil e do Plug, o Origem Woot http://goo.gl/iubHkn",
+    "autowoot": "/me Nos recomendamos o AutoWoot mais delicinha do Brasil e do Plug, o Origem Woot http://origem-woot.com/",
     "brandambassador": "/me O Embaixador da Marca é a voz do Ban no Plug DJ. Eles fazem eventos, zoam nas comunidades e espalham ban ao redor do mundo. Para mais informações acesse: https://plug.dj/ba",
     "bouncerplusrank": "/me [@%%NAME%%] You have to be manager or up to enable Bouncer+.",
     "chatcleared": "/me [@%%NAME%%] Limpou o chat com o cu.",
