--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,33 +1,36 @@
 {
-    "nodatafound": "Dados anteriores não encontrados.",
-    "retrievingdata": "Recuperando dados armazenados anteriormente.",
-    "datarestored": "Dados armazenados anteriormente recuperados com êxito.",
-    "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot.",
-    "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um bouncer.",
-    "online": "/me %%BOTNAME%% v%%VERSION%% online!",
+    "nodatafound": "Dados anteriores não encontrados nessa porra.",
+    "retrievingdata": "Recuperando dados armazenados anteriormente dessa delicia.",
+    "datarestored": "Dados armazenados anteriormente recuperados com êxito porra.",
+    "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot, seu lixo.",
+    "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um segurança viadão.",
+    "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU NESSE KAKAKARAIOOOOO!",
 
 
-    "welcome": "Bem vindo(a) %%NAME%% seu gostosão",
-    "welcomeback": "Bem vindo(a) de volta, %%NAME%%",
-    "songknown": "/me :repeat: essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás. :repeat:",
-    "timelimit": "@%%NAME%%, sua música tem duração superior a %%MAXLENGTH%% minutos. Você precisa de permissão para tocar algo longo PORRA.",
-    "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
+    "welcome": "Seje welcomido(a), %%NAME%% e leia nossas regras http://goo.gl/6RP5x1",
+    "welcomeback": "Seje welcomido(a) de volta, %%NAME%%",
+    "songknown": "@%%NAME%%, essa música está no histórico porra, vou pular",
+    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você precisa de permissão para tocar músicas longas.",
+    "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar música de própria autoria!",
     "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
 
 
-    "isopen": "/me A roleta COMEÇOU CARALHO! Use !join para entrar nessa PORRA!",
-    "winnerpicked": "/me UM FILHO DA PUTA FOI ESCOLHIDO! @%%NAME%% ganhou a posição %%POSITION%% todos comam o cu dele.",
-
+    "isopen": "/me A roleta foi iniciada! Use !join para participar!",
+    "winnerpicked": "/me Um vencedor foi escolhido! @%%NAME%% ganhou a posição %%POSITION%%.",
+    
+    "ball": "/me A pergunta de %%NAME%% foi: \"%%QUESTION%%\" e a resposta de %%BOTNAME%% é: \"%%RESPONSE%%\"",
+    "notghosting": "[%%NAME1%%] %%NAME2%% não virou fantasma.",
+    "ghosting": "[%%NAME1%%] %%NAME2%% deve ter virado fantasma.",
 
     "alreadyadding": "/me Usuário já está sendo adicionado! Posição desejada alterada para %%POSITION%%.",
     "adding": "/me @%%NAME%% foi adicionado à fila. Posição atual: %%POSITION%%.",
 
 
-    "usernotfound": "/me Zé Bostola não encontrado.",
-    "notdisconnected": "/me @%%NAME%% não caiu quando estive nesse caraio.",
+    "usernotfound": "/me Usuário não encontrado.",
+    "notdisconnected": "/me @%%NAME%% não tem se desconectado durante meu tempo aqui.",
     "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
-    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás PORRA: %%TIME%%.",
-    "valid": "/me @%%NAME%% caiu a %%TIME%% atrás e deve ter posição %%POSITION%%.",
+    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás: %%TIME%%.",
+    "valid": "/me @%%NAME%% desconectou-se %%TIME%% atrás e deve ter posição %%POSITION%%.",
 
 
     "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
@@ -35,12 +38,16 @@
     "afkremove": "@%%NAME%%, você foi removido por estar inativo por %%TIME%%. Você teve a posição %%POSITION%%. Use o chat pelo menos uma vez em 1 hora se quiser tocar.",
 
 
-    "caps": "@%%NAME%%, desligue seu capslock, filho da puta.",
-    "askskip": "@%%NAME%%, não peça para pular PORRA.",
-    "spam": "/me @%%NAME%%, não faça spam, PORRA.",
-    "roomadvertising": "@%%NAME%%, POSTA ESSE LINK, NO CU DA ARROMBADA DA TUA MÃE FILHO DA PUTA.",
-    "adfly": "@%%NAME%%, mude de autowoot seu kawaiizudo :heart: recomendamos o Origem woot http://goo.gl/iubHkn",
+    "caps": "@%%NAME%%, desligue seu capslock, por favor.",
+    "askskip": "@%%NAME%%, não peça skips.",
+    "spam": "/me @%%NAME%%, não faça spam, por favor.",
+    "roomadvertising": "@%%NAME%%, não poste link de outras comunidades, por favor.",
+    "adfly": "@%%NAME%%, por favor mude seu script autowoot. Nós sugerimos plugCubed: http://plugcubed.net/",
 
+    "validgiftags": "/me [@%%NAME%%] http://media.giphy.com/media/%%ID%%/giphy.gif [Tags: %%TAGS%%]",
+    "invalidgiftags": "/me [@%%NAME%%] Tag inválida, tente algo diferente. [Tags: %%TAGS%%]",
+    "validgifrandom": "/me [@%%NAME%%] http://media.giphy.com/media/%%ID%%/giphy.gif [GIF randômica]",
+    "invalidgifrandom": "/me [@%%NAME%%] Instância inválida, tente novamente.",
 
     "invalidtime": "/me [@%%NAME%%] Tempo inválido.",
     "nouserspecified": "/me [@%%NAME%%] Usuário não especificado.",
@@ -51,49 +58,60 @@
     "nolimitspecified": "/me [@%%NAME%%] Limite não especificado.",
     "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido.",
     "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida.",
+    "whois": "/me [%%NAME1%%] Usuário: %%NAME2%%, ID: %%ID%%, Rank: %%RANK%%, Registro: %%JOINED%%, Nível: %%LEVEL%%, Linguagem: %%LANGUAGE%%, Avatar: %%AVATAR%%, Status: %%STATUS%%%%PROFILE%%",
     "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado.",
     "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado.",
     "afkremoval": "Remoção de AFK",
     "afksremoved": "AFKs removidos",
     "afklimit": "Limite AFK",
+    "autodisable": "autodisable",
     "autoskip": "autoskip",
     "newblacklisted": "/me [@%%NAME%%] Essa música está na lista negra %%BLACKLIST%%! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
+    "blinfo": "[@%%NAME%%] Info da Blacklist - autor: %%AUTHOR%%, título: %%TITLE%%, ID: %%SONGID%%",
+    "blacklist": "blacklist",
     "cycleguard": "cycleguard",
     "timeguard": "timeguard",
     "chatfilter": "chatfilter",
+    "historyskip": "historyskip",
     "lockdown": "lockdown",
     "lockguard": "lockguard",
     "usercommands": "comandos de usuário",
     "motd": "MotD",
-    "welcomemsg": "mensagem de boas vindas para novas bichas",
+    "welcomemsg": "mensagem de boas vindas",
     "songstats": "estatísticas de música",
-    "etarestriction": "restrição de eta",
+    "etarestriction": "restrição de ETA",
+    "voteskip": "voteskip",
+    "voteskiplimit": "/me [@%%NAME%%] Limite de voteskip é, no momento, %%LIMIT%% mehs.",
+    "voteskipexceededlimit": "/me @%%NAME%%, sua música excedeu o limite de (%%LIMIT%% mehs).",
+    "voteskipinvalidlimit": "/me [@%%NAME%%] Limite de voteskip inválido, por favor, tente novamente usando um número válido para indicar o número de mehs.",
+    "voteskipsetlimit": "/me [@%%NAME%%] Limite de voteskip definido para %%LIMIT%%.",
     "activeusersintime": "/me [@%%NAME%%] %%AMOUNT%% usuários estiveram ativos nos últimos %%TIME%% minutos.",
     "maximumafktimeset": "/me [@%%NAME%%] Duração máxima de AFK agora é: %%TIME%% minutos.",
     "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
     "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
-    "autowoot": "/me Nós recomendamos o Origem Woot http://goo.gl/iubHkn",
-    "brandambassador": "/me Um Embaixador é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
+    "autowoot": "/me Nós recomendamos plugCubed para autowoot: http://plugcubed.net/",
+    "brandambassador": "/me Um Embaixador de Marca é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: https://plug.dj/ba",
     "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Bouncer+.",
-    "chatcleared": "/me [@%%NAME%%] O chat foi limpo com o cu de algum vassilau.",
-    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
+    "chatcleared": "/me [@%%NAME%%] O chat foi limpo.",
+    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo.",
     "commandslink": "/me Comandos do %%BOTNAME%%: %%LINK%%",
-    "eatcookie": "/me ama biscoitos esse arrombado.",
-    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse biscoito sozinho.",
+    "eatcookie": "/me ama cookies.",
+    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse cookie sozinho.",
     "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
     "emojilist": "/me Emojis: %%LINK%%",
     "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
-    "eta": "/me @%%NAME%% você tocará em aproximadamente %%TIME%% nessa bagaça.",
-    "facebook": "/me Curta nossa a porra da nossa página no Facebook: %%LINK%%",
+    "eta": "/me @%%NAME%% você tocará em aproximadamente %%TIME%%.",
+    "facebook": "/me Curta nossa página no Facebook: %%LINK%%",
     "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj: %%LINK%%",
     "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para sair da mesma.)",
-    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve nessa delicia por %%TIME%%.",
+    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve na sala por %%TIME%%.",
     "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior!",
     "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
-    "kill": "/me Eu voltarei, e vou comer seu cu com sal seu arromba...",
+    "kill": "/me Desligando...",
+    "logout": "/me [@%%NAME%%] Deslogando %%BOTNAME%%",
     "rouletteleave": "/me @%%NAME%% deixou a roleta!",
     "songlink": "/me [@%%NAME%%] Link para a música atual: %%LINK%%",
     "usedlockskip": "/me [%%NAME%% usou 'lockskip'.]",
@@ -103,19 +121,19 @@
     "motdset": "/me Mensagem do Dia:  %%MSG%%",
     "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
     "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, por favor.",
-    "move": "/me [%%NAME%% usou 'move', é super efetivo.]",
+    "move": "/me [%%NAME%% usou 'move'.]",
     "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
-    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos.",
+    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mudar até no máximo %%TIME%% minutos.",
     "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s).",
     "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado.",
     "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior.",
     "oplist": "/me Lista OP: %%LINK%%",
-    "pong": "/me Pong NO TEU CU SEU FILHO DA PUTA!",
-    "reload": "/me Reiniciando, mas primeiro vou dar o cu...",
-    "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na porra da fila.",
+    "pong": "/me Pong!",
+    "reload": "/me Reiniciando...",
+    "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na fila de espera.",
     "roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
     "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% usou 'skip', é super efetivo.]",
+    "skip": "/me [%%NAME%% usou 'skip'.]",
     "madeby": "/me Este bot foi feito por %%NAME%%.",
     "activefor": "Estive online por %%TIME%%.",
     "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
@@ -128,9 +146,9 @@
     "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado.",
     "unmuterank": "/me [@%%NAME%%] Você não pode desmutar usuários do mesmo rank ou superior.",
     "commandscd": "/me [@%%NAME%%] O tempo de espera de comandos para usuários agora é %%TIME%% segundos.",
-    "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: ' + %%WOOT%% + ', mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
+    "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
     "website": "/me Visite nosso site: %%LINK%%",
     "youtube": "/me [%%NAME%%] Inscreva-se no nosso canal: %%LINK%%",
-    "songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
-
+    "songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M.",
+    "purchase": "/me [@%%NAME%%] Compre mais Plug Notes: https://plug.dj/purchase"
 }
