--- a/lang/pt.json
+++ b/lang/pt.json
@@ -10,39 +10,39 @@
     "welcome": "Seje welcomido(a), %%NAME%% e leia nossas regras http://goo.gl/6RP5x1",
     "welcomeback": "Seje welcomido(a) de volta, %%NAME%%",
     "songknown": "@%%NAME%%, essa música está no histórico porra, vou pular",
-    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você precisa de permissão para tocar músicas longas.",
+    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você não pode rodar videos longos assim PORRA.",
     "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar música de própria autoria!",
     "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
 
 
-    "isopen": "/me A roleta foi iniciada! Use !join para participar!",
-    "winnerpicked": "/me Um vencedor foi escolhido! @%%NAME%% ganhou a posição %%POSITION%%.",
+    "isopen": "/me Rodam rodammm começou! Use !join para participar! você poderá ser movido para cima na fila, ou para baixo",
+    "winnerpicked": "/me Um viadão foi escolhido! @%%NAME%% ganhou a posição %%POSITION%%, todos verão sua bundinha negra",
     
-    "ball": "/me A pergunta de %%NAME%% foi: \"%%QUESTION%%\" e a resposta de %%BOTNAME%% é: \"%%RESPONSE%%\"",
+    "ball": "/me A pergunta do viadão %%NAME%% foi: \"%%QUESTION%%\" e a resposta de %%BOTNAME%% é: \"%%RESPONSE%%\"",
     "notghosting": "[%%NAME1%%] %%NAME2%% não virou fantasma.",
     "ghosting": "[%%NAME1%%] %%NAME2%% deve ter virado fantasma.",
 
-    "alreadyadding": "/me Usuário já está sendo adicionado! Posição desejada alterada para %%POSITION%%.",
+    "alreadyadding": "/me Usuário já está sendo adicionado carai! Posição desejada alterada para %%POSITION%%.",
     "adding": "/me @%%NAME%% foi adicionado à fila. Posição atual: %%POSITION%%.",
 
 
-    "usernotfound": "/me Usuário não encontrado.",
-    "notdisconnected": "/me @%%NAME%% não tem se desconectado durante meu tempo aqui.",
+    "usernotfound": "/me Viadão não encontrado.",
+    "notdisconnected": "/me @%%NAME%% não saiu enquanto estive dando a bunda aqui.",
     "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
-    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás: %%TIME%%.",
-    "valid": "/me @%%NAME%% desconectou-se %%TIME%% atrás e deve ter posição %%POSITION%%.",
+    "toolongago": "/me @%%NAME%% foi dar o cu a muito tempo atrás porra: %%TIME%%, não fode",
+    "valid": "/me @%%NAME%% foi dar o cu há %%TIME%% atrás e deve ter posição %%POSITION%%.",
 
 
-    "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
+    "warning1": "@%%NAME%%, você esteve dando o cu por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
     "warning2": "@%%NAME%%, você será removido em breve por inatividade se não responder.",
     "afkremove": "@%%NAME%%, você foi removido por estar inativo por %%TIME%%. Você teve a posição %%POSITION%%. Use o chat pelo menos uma vez em 1 hora se quiser tocar.",
 
 
-    "caps": "@%%NAME%%, desligue seu capslock, por favor.",
-    "askskip": "@%%NAME%%, não peça skips.",
-    "spam": "/me @%%NAME%%, não faça spam, por favor.",
-    "roomadvertising": "@%%NAME%%, não poste link de outras comunidades, por favor.",
-    "adfly": "@%%NAME%%, por favor mude seu script autowoot. Nós sugerimos plugCubed: http://plugcubed.net/",
+    "caps": "@%%NAME%%, DESLIGA ESSE CAPS/SHIFT FILHO DA MÃE SEM COSTUMES <3.",
+    "askskip": "@%%NAME%%, não peça para pular FILHO DA PUTA.",
+    "spam": "/me @%%NAME%%, não faça spam caralho.",
+    "roomadvertising": "@%%NAME%%, não poste link de outras comunidades aqui, SEU FILHO DA PUTA.",
+    "adfly": "@%%NAME%%, mude seu autowoot. Nós sugerimos o Origem Woot: http://origem-woot.net/",
 
     "validgiftags": "/me [@%%NAME%%] http://media.giphy.com/media/%%ID%%/giphy.gif [Tags: %%TAGS%%]",
     "invalidgiftags": "/me [@%%NAME%%] Tag inválida, tente algo diferente. [Tags: %%TAGS%%]",
@@ -58,11 +58,11 @@
     "nolimitspecified": "/me [@%%NAME%%] Limite não especificado.",
     "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido.",
     "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida.",
-    "whois": "/me [%%NAME1%%] Usuário: %%NAME2%%, ID: %%ID%%, Rank: %%RANK%%, Registro: %%JOINED%%, Nível: %%LEVEL%%, Linguagem: %%LANGUAGE%%, Avatar: %%AVATAR%%, Status: %%STATUS%%%%PROFILE%%",
-    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado.",
-    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado.",
-    "afkremoval": "Remoção de AFK",
-    "afksremoved": "AFKs removidos",
+    "whois": "/me [%%NAME1%%] Viadão: %%NAME2%%, ID: %%ID%%, Rank: %%RANK%%, Registro: %%JOINED%%, Nível: %%LEVEL%%, Linguagem: %%LANGUAGE%%, Avatar: %%AVATAR%%, Status: %%STATUS%%%%PROFILE%%",
+    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado carai.",
+    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado carai.",
+    "afkremoval": "Remoção de AFKs dadeiros de cu",
+    "afksremoved": "AFKs dadeiros de cu removidos",
     "afklimit": "Limite AFK",
     "autodisable": "autodisable",
     "autoskip": "autoskip",
@@ -80,35 +80,35 @@
     "welcomemsg": "mensagem de boas vindas",
     "songstats": "estatísticas de música",
     "etarestriction": "restrição de ETA",
-    "voteskip": "voteskip",
-    "voteskiplimit": "/me [@%%NAME%%] Limite de voteskip é, no momento, %%LIMIT%% mehs.",
+    "voteskip": "votos para pular",
+    "voteskiplimit": "/me [@%%NAME%%] Limite de votos para pular é %%LIMIT%% mehs.",
     "voteskipexceededlimit": "/me @%%NAME%%, sua música excedeu o limite de (%%LIMIT%% mehs).",
-    "voteskipinvalidlimit": "/me [@%%NAME%%] Limite de voteskip inválido, por favor, tente novamente usando um número válido para indicar o número de mehs.",
-    "voteskipsetlimit": "/me [@%%NAME%%] Limite de voteskip definido para %%LIMIT%%.",
+    "voteskipinvalidlimit": "/me [@%%NAME%%] Limite de votos para pular inválido, por favor, tente novamente usando um número válido para indicar o número de mehs.",
+    "voteskipsetlimit": "/me [@%%NAME%%] Limite de votos para pular definido para %%LIMIT%%.",
     "activeusersintime": "/me [@%%NAME%%] %%AMOUNT%% usuários estiveram ativos nos últimos %%TIME%% minutos.",
     "maximumafktimeset": "/me [@%%NAME%%] Duração máxima de AFK agora é: %%TIME%% minutos.",
     "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
     "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
-    "autowoot": "/me Nós recomendamos plugCubed para autowoot: http://plugcubed.net/",
-    "brandambassador": "/me Um Embaixador de Marca é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: https://plug.dj/ba",
-    "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Bouncer+.",
-    "chatcleared": "/me [@%%NAME%%] O chat foi limpo.",
-    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo.",
+    "autowoot": "/me Nós recomendamos o Autowoot Origem Woot: http://origem-woot.net/",
+    "brandambassador": "/me Um Embaixador de Marca é a voz do ban no plug.dj. Eles promovem bans, ajudam as comunidades com bans e divulgam a plug.dj para todo o mundo com bans. Mais info: https://plug.dj/ba",
+    "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Segurança+, seu falho.",
+    "chatcleared": "/me [@%%NAME%%] limpou o chat com o cu dele.",
+    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
     "commandslink": "/me Comandos do %%BOTNAME%%: %%LINK%%",
-    "eatcookie": "/me ama cookies.",
-    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse cookie sozinho.",
+    "eatcookie": "/me ama pirokas.",
+    "nousercookie": "/em Não vejo um viadão chamado %%NAME%% na sala. Vou comer essa piroka sozinho.",
     "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
-    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
+    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários, seu falho.",
     "emojilist": "/me Emojis: %%LINK%%",
-    "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
-    "eta": "/me @%%NAME%% você tocará em aproximadamente %%TIME%%.",
-    "facebook": "/me Curta nossa página no Facebook: %%LINK%%",
+    "notinwaitlist": "@%%NAME%%, você não está na lista de espera carai.",
+    "eta": "/me @%%NAME%% todos verão sua bundinha em aproximadamente %%TIME%% <3.",
+    "facebook": "/me Curta nossa página no Facebook: https://www.fb.com/exercitopdj",
     "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj: %%LINK%%",
-    "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para sair da mesma.)",
+    "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para arregar seu merda.)",
     "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve na sala por %%TIME%%.",
-    "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior!",
+    "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior, SEU MERDA!",
     "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
     "kill": "/me Desligando...",
     "logout": "/me [@%%NAME%%] Deslogando %%BOTNAME%%",
@@ -122,28 +122,28 @@
     "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
     "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, por favor.",
     "move": "/me [%%NAME%% usou 'move'.]",
-    "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
-    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mudar até no máximo %%TIME%% minutos.",
-    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s).",
+    "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado com uma piroka.",
+    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos.",
+    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado com uma piroka por %%TIME%% minuto(s).",
     "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado.",
-    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior.",
+    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior, SEU MERDA!.",
     "oplist": "/me Lista OP: %%LINK%%",
-    "pong": "/me Pong!",
-    "reload": "/me Reiniciando...",
+    "pong": "/me Pong NO TEU CU FILHO DA PUTA!",
+    "reload": "/me Vou ir dar o cu ali e já volto...",
     "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na fila de espera.",
     "roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
     "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% usou 'skip'.]",
-    "madeby": "/me Este bot foi feito por %%NAME%%.",
-    "activefor": "Estive online por %%TIME%%.",
+    "skip": "/me [%%NAME%% usou 'skip', é super efetivo no pokemon tipo Merda.]",
+    "madeby": "/me Este bot foi feito por %%NAME%%, e editado por Big Boss amorzinho.",
+    "activefor": "Estive dando o cu por %%TIME%%.",
     "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
     "swapwlonly": "/me [@%%NAME%%] Use !swap somente com usuários que estão na fila de espera.",
     "swapping": "/me Trocando posições: %%NAME1%% com %%NAME2%%.",
-    "genres": "/me Encontre os gêneros permitidos aqui: %%LINK%%",
-    "notbanned": "/me [@%%NAME%%] Usuário mencionado não foi banido.",
+    "genres": "/me Os generos permitidos são videos de "Zoeira", Poops, MLG's e etc, música somente de madrugada",
+    "notbanned": "/me [@%%NAME%%] Usuário mencionado não foi banido para a casa da avó dadeira de cu dele.",
     "unmutedeveryone": "/me [@%%NAME%%] Todos foram desmutados.",
     "unmuteeveryonerank": "/me [@%%NAME%%] Somente Coordenadores podem desmutar todos os usuários de uma vez.",
-    "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado.",
+    "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado com a piroka do Kid Bengala com Ebola.",
     "unmuterank": "/me [@%%NAME%%] Você não pode desmutar usuários do mesmo rank ou superior.",
     "commandscd": "/me [@%%NAME%%] O tempo de espera de comandos para usuários agora é %%TIME%% segundos.",
     "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
