--- a/lang/pt.json
+++ b/lang/pt.json
@@ -109,8 +109,8 @@
     "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para arregar seu merda.)",
     "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve na sala por %%TIME%%.",
     "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior, SEU MERDA!",
-    "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
-    "kill": "/me Desligando...",
+    "kick": "[@%%NAME%%], @%%USERNAME%% FILHO DA PUTA, você está sendo kickado da comunidade por %%TIME%% minutos, ninguém mandou ser viadão de mais.",
+    "kill": "/me Filho da puta, não me mata CARALH..........Bot is dead",
     "logout": "/me [@%%NAME%%] Deslogando %%BOTNAME%%",
     "rouletteleave": "/me @%%NAME%% deixou a roleta!",
     "songlink": "/me [@%%NAME%%] Link para a música atual: %%LINK%%",
@@ -121,7 +121,7 @@
     "motdset": "/me Mensagem do Dia:  %%MSG%%",
     "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
     "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, por favor.",
-    "move": "/me [%%NAME%% usou 'move'.]",
+    "move": "/me [%%NAME%% usou 'move', super efetivo no Pokemon tipo Falho.]",
     "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado com uma piroka.",
     "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos.",
     "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado com uma piroka por %%TIME%% minuto(s).",
@@ -129,7 +129,7 @@
     "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior, SEU MERDA!.",
     "oplist": "/me Lista OP: %%LINK%%",
     "pong": "/me Pong NO TEU CU FILHO DA PUTA!",
-    "reload": "/me Vou ir dar o cu ali e já volto...",
+    "reload": "/me Vou queimar uns negros ali, já volto.......",
     "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na fila de espera.",
     "roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
     "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
