--- a/lang/pt.json
+++ b/lang/pt.json
@@ -96,8 +96,8 @@
     "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
     "commandslink": "/me Comandos do %%BOTNAME%%: %%LINK%%",
     "eatcookie": "/me ama pirokas.",
-    "nousercookie": "/em Não vejo um viadão chamado %%NAME%% na sala. Vou comer essa piroka sozinho.",
-    "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
+    "nousercookie": "/em Não vejo um viadão chamado %%NAME%% na sala. Então vou enfiar isso no seu cu.",
+    "selfcookie": "/me @%%NAME%%, você é safado heim, DIVIDE COM OS OUTROS FILHO DA PUTA, de nada :blue_heart:",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários, seu falho.",
