--- a/lang/pt.json
+++ b/lang/pt.json
@@ -4,7 +4,7 @@
     "datarestored": "Dados armazenados anteriormente recuperados com êxito porra.",
     "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot, seu lixo.",
     "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um segurança viadão.",
-    "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU NESSE KAKAKARAIOOOOO!",
+    "online": "/me %%BOTNAME%% v%%VERSION%% bem finíssimo ativado!",
 
 
     "welcome": "Seje welcomido(a), @%%NAME%% amorzinho, leia nossas regras para não fazer nenhuma besteira http://goo.gl/R5CLI7 <3 <3",
